--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -3,6 +3,8 @@
 @import '../blocks/header';
 @import '../blocks/buttons';
 @import '../blocks/benefits';
+@import '../blocks/_consultation';
+@import '../blocks/_forms';
 * {
     font-family: Museo Sans Cyrl, sans-serif;
 }
