--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -41,6 +41,10 @@
     font-weight: 300;
     font-size: 14px;
     text-align: center;
+    a {   
+    color: #ff0000;
+    text-decoration: underline;
+    }
 }
 
 }
