--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -5,6 +5,7 @@
 @import '../blocks/benefits';
 @import '../blocks/_consultation';
 @import '../blocks/_forms';
+@import '../blocks/carousel';
 * {
     font-family: Museo Sans Cyrl, sans-serif;
 }
