--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -6,7 +6,8 @@
 @import '../blocks/_consultation';
 @import '../blocks/_forms';
 @import '../blocks/carousel';
-@import '../blocks/_catalog';
+@import '../blocks/catalog';
+@import '../blocks/reviews';
 * {
     font-family: Museo Sans Cyrl, sans-serif;
 }
