--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,9 @@
     font-size: 12px;
     color: #FFFFFF;
     text-transform: uppercase;
+    &:hover{
+        box-shadow: 3px 3px 20px red;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
