adaptation for modal

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -140,6 +140,13 @@
         height: 135px;
         margin-top: 0;
     }
+    .feed-form {
+       align-items: center;
+    }
+    .consultation h2 {
+        font-size: 25px;
+    }
+
     .slick-slide img {
         width: 420px;
     }
@@ -161,5 +168,18 @@
         transform: translateX(-2%);
         top: 10px;
     }
-}
+    .modal {
+    width: 280px;
+    min-height: 300px;
+    left: 43%;
+    }
+    .button_submit {
+        width: 70%;
+        height: 55px;
+        font-size: 13px;
+    }
 
+    .feed-form {
+        width: 100%;
+    }
+}
