--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -20,11 +20,12 @@
         top: 0;
         right: -40px;
         font-size: 41px;
-        line-height: 21px;
+        line-height: 20px;
         color: $main-color;
         cursor: pointer;
         &:hover {
-            box-shadow: 3px 3px 15px red;
+           background-color: rgb(255, 255, 255);
+           border-radius: 50%;
         }
 
     }
